# PyDocCheck

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  quick_test.py  requirements.txt
src/pydoccheck/: __init__.py
src/pydoccheck/execution/: __init__.py
src/pydoccheck/models/: __init__.py  code_block.py
src/pydoccheck/parsers/: __init__.py  markdown_parser.py  rst_parser.py
src/pydoccheck/reporting/: __init__.py
src/pydoccheck/repository/: __init__.py
src/pydoccheck/utils/: helpers.py
tests/: __init__.py  test_markdown_parser.py  test_rst_parser.py
tests/fixtures/sample_docs/: __init__.py  sample_complex.md  sample_rst.rst  sample_simple.md
