[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydoccheck"
version = "0.1.0"
description = "Automated Documentation Code Validator for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BackJiYou", email = "backjiyou@example.com"}
]
license = {text = "MIT"}
keywords = ["documentation", "code", "validation", "testing"]

dependencies = [
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
